# openalice-desktop

./: .gitignore  .gitmodules  LICENSE  NOTICE.md  OPENALICE_UPSTREAM.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: build-dmg.yml
docs/: BUILD_GUIDE.md  LICENSE_COMPLIANCE.md  RELEASE_V1_ACCEPTANCE.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: build-dmg.sh  build-openalice.sh  fetch-openalice.sh  make-diagnostic-bundle.sh  prepare-runtime.sh  smoke-test.sh  verify-release-artifacts.sh  verify-runtime-commands.sh
src/: App.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tsconfig.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/launcher/: mod.rs
src-tauri/src/ports/: mod.rs
src/routes/: About.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx  SetupWizard.tsx  Troubleshooting.tsx
src/styles/: global.css
