[package]
name = "openalice-desktop"
version = "0.1.0-alpha.1"
edition = "2021"
description = "macOS Desktop wrapper for OpenAlice"
license = "AGPL-3.0-only"
repository = "https://github.com/Dreaminmaster/openalice-desktop"

[dependencies]
tauri = { version = "2", features = ["system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
regex = "1"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies

[build-dependencies]
tauri-build = { version = "2" }
