[package]
name = "openalice-desktop"
version = "1.0.0"
edition = "2021"
description = "macOS Desktop wrapper for OpenAlice"
license = "AGPL-3.0-only"
repository = "https://github.com/Dreaminmaster/openalice-desktop"

[lib]
name = "openalice_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
regex = "1"

[build-dependencies]
tauri-build = { version = "2" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
